--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -62,7 +62,7 @@
         </div>
 
         <div class="text-center mt-4">
-            <a href="https://ahmedrady66.github.io/QuickNote_LandingPage/" target="_blank" class="btn btn-primary">View on GitHub</a>
+            <a href="https://github.com/AhmedRady66/QuickNote_Portfolio" target="_blank" class="btn btn-primary">View on GitHub</a>
         </div>
     </div>
 </section>
